# from-cfx-edits-to-human-narratives

./: README.md  calculate_human_models_feedback.sh  evaluate_llm_judge.sh  gather_eval_datasets.sh  generate_latex_results_table.sh  get_all_results.sh  get_smoke_results.sh  init_data.py  pyproject.toml  train_human_feedback_model.sh  train_human_feedback_models.sh
datasets/human-feedback/test/: interaction-match-human-labeled.csv  readability-human-labeled.csv
datasets/human-feedback/validation/: interaction-match-human-labeled.csv  readability-human-labeled.csv
recsys_nle/: __init__.py  cuda_utils.py
recsys_nle/cf_explanations/LXR/: LXR_training.py  __init__.py  explanation_analysis.py  metrics_original.py  recommenders_training.py  sample.py  utility.py
recsys_nle/cf_explanations/Spinrec/: SPINRec_functions.py  baselines_functions.py  help_functions.py  metrics_SPINRec.py
recsys_nle/core/: __init__.py  attribution.py  logging_utils.py  movielens.py  recommender_wrapper.py
recsys_nle/nl_explanations/: __init__.py  dataset_builder.py  generator.py  hf_json.py  llm.py  metrics.py  payloads.py  prompts.py  results.py  workflow.py
recsys_nle/nl_explanations/evaluation/: __init__.py  base.py  cfx_match.py  faithfulness.py  interaction_scoring.py  non_cfx_match.py  plausibility.py  readability.py
recsys_nle/pipeline/: __init__.py  config.py  datasets_exporter.py  distance_metrics.py  metrics.py  reporting.py  reward.py  run_summary.py  workflow.py
scripts/: __init__.py  calculate_human_model_feedback.py  evaluate_llm_judge.py  gather_eval_datasets.py  generate_latex_results_table.py  run_dpo.py  run_dpo_eval_sweep.py  run_eval_eval_dpo_eval.sh  run_pipeline.py  train_human_feedback_model.py
tests/: __init__.py  test_calculate_human_model_feedback.py  test_create_enriched_movie_metadata.py  test_cuda_utils.py  test_evaluate_llm_judge.py  test_explanation_analysis.py  test_gather_eval_datasets.py  test_generate_latex_accent_table2.py  test_generate_latex_results_table.py  test_run_dpo_eval_sweep.py  test_run_dpo_script.py  test_run_pipeline_reward_cli.py  test_run_pipeline_script.py  test_train_human_feedback_model_script.py
tests/core/: test_recommender_wrapper.py
tests/nl_explanations/: __init__.py  hf_model_load_smoke_worker.py  test_dataset_builder.py  test_generator_output_normalization.py  test_generator_reasoning_flag.py  test_hf_json.py  test_hf_model_load_smoke.py  test_huggingface_llm_client.py  test_openai_llm_client.py  test_prompts.py  test_workflow.py
tests/pipeline/: __init__.py  test_datasets_exporter.py  test_distance_metrics.py  test_metrics.py  test_reporting.py  test_reward.py  test_run_summary.py  test_workflow.py
(+3 files in other folders)
